[gd_scene load_steps=6 format=3 uid="uid://ckitigxn8t7pd"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_window/block_environment/g_block_schema/g_block/g_block.tscn" id="1_hc6ha"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_function/g_block_function.gd" id="2_bqm36"]
[ext_resource type="PackedScene" uid="uid://cq3i7td46je11" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_end_point.tscn" id="3_3wuq7"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_function/OptionButton.gd" id="3_klbmt"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="4_vrcjd"]

[node name="GBlockFunction" instance=ExtResource("1_hc6ha")]
script = ExtResource("2_bqm36")

[node name="Type" parent="Control/MarginContainer/Content" index="1"]
text = "Блок функции"

[node name="OptionButton" type="OptionButton" parent="Control/MarginContainer/Content" index="2"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true
script = ExtResource("3_klbmt")

[node name="GEndPoint" parent="EndPoints" index="0" instance=ExtResource("3_3wuq7")]
position = Vector2(0, -50)

[node name="GBeginPoint" parent="BeginPoints" index="0" instance=ExtResource("4_vrcjd")]
position = Vector2(0, 50)
